--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,8 @@
     "lib": ["es2015", "es2016", "es2017", "es6", "es7", "dom"],
     "baseUrl": "./src",
     "paths": {
-      "actions/*": ["actions/*"],
-      "components/*": ["components/*"],
-      "containers/*": ["containers/*"],
-      "lib/*": ["lib/*"],
-      "reducers/*": ["reducers/*"]
+      "index/*": ["index/*"],
+      "about/*": ["about/*"]
     }
   }
 }
